docs: documentation route delete product id
add all documentation with swagger about route delete product id, that delete a product by its id
